--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <script>
-      // Dirección IP del servidor (cambia esto a la URL de ngrok o a la IP local)
-      const serverIp = "http://192.168.16.30:8080"; // Cambia esto a la IP de tu servidor
+      // Dirección IP del servidor (cambia esto a la URL de ngrok)
+      const serverIp = "https://abcd1234.ngrok.io"; // Cambia esto a la URL de ngrok
 
       // Enviar un paquete al servidor
       fetch(serverIp + '/get-info') // Asegúrate de que la ruta sea correcta
