--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <script>
       // Dirección IP del servidor (cambia esto a la URL de ngrok)
-      const serverIp = "https://https://a277-152-207-109-86.ngrok-free.app"; // Cambia esto a la URL de ngrok
+      const serverIp = "https://a277-152-207-109-86.ngrok-free.app"; // Cambia esto a la URL de ngrok
 
       // Enviar un paquete al servidor
       fetch(serverIp + '/get-info') // Asegúrate de que la ruta sea correcta
